--- a/backend/src/framework/XiHan.BasicApp.Web.Core/XiHan.BasicApp.Web.Core.csproj
+++ b/backend/src/framework/XiHan.BasicApp.Web.Core/XiHan.BasicApp.Web.Core.csproj
@@ -15,11 +15,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="XiHan.Framework.Web.Api" Version="1.4.3" />
-      <PackageReference Include="XiHan.Framework.Web.Core" Version="1.4.3" />
-      <PackageReference Include="XiHan.Framework.Web.Docs" Version="1.4.3" />
-      <PackageReference Include="XiHan.Framework.Web.Gateway" Version="1.4.3" />
-      <PackageReference Include="XiHan.Framework.Web.RealTime" Version="1.4.3" />
+      <PackageReference Include="XiHan.Framework.Web.Api" Version="1.4.4-beta.1" />
+      <PackageReference Include="XiHan.Framework.Web.Core" Version="1.4.4-beta.1" />
+      <PackageReference Include="XiHan.Framework.Web.Docs" Version="1.4.4-beta.1" />
+      <PackageReference Include="XiHan.Framework.Web.Gateway" Version="1.4.4-beta.1" />
+      <PackageReference Include="XiHan.Framework.Web.RealTime" Version="1.4.4-beta.1" />
     </ItemGroup>
 
     <ItemGroup>
