--- a/backend/src/framework/XiHan.BasicApp.Core/XiHan.BasicApp.Core.csproj
+++ b/backend/src/framework/XiHan.BasicApp.Core/XiHan.BasicApp.Core.csproj
@@ -14,37 +14,37 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="XiHan.Framework" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.AI" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Application" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Authentication" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Authorization" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Bot" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Caching" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.CodeGeneration" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Core" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Data" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.DistributedIds" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Domain" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.EventBus" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Http" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Localization" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Logging" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Messaging" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.MultiTenancy" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.ObjectMapping" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Script" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.SearchEngines" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Security" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Serialization" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Settings" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Tasks" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Templating" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Threading" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Uow" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Utils" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.Validation" Version="1.4.5" />
-      <PackageReference Include="XiHan.Framework.VirtualFileSystem" Version="1.4.5" />
+      <PackageReference Include="XiHan.Framework" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.AI" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Application" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Authentication" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Authorization" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Bot" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Caching" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.CodeGeneration" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Core" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Data" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.DistributedIds" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Domain" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.EventBus" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Http" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Localization" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Logging" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Messaging" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.MultiTenancy" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.ObjectMapping" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Script" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.SearchEngines" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Security" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Serialization" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Settings" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Tasks" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Templating" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Threading" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Uow" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Utils" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.Validation" Version="2.0.0-alpha" />
+      <PackageReference Include="XiHan.Framework.VirtualFileSystem" Version="2.0.0-alpha" />
     </ItemGroup>
 
 </Project>
