--- a/backend/src/framework/XiHan.BasicApp.Web.Core/XiHan.BasicApp.Web.Core.csproj
+++ b/backend/src/framework/XiHan.BasicApp.Web.Core/XiHan.BasicApp.Web.Core.csproj
@@ -15,11 +15,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="XiHan.Framework.Web.Api" Version="2.2.0-alpha.4" />
-      <PackageReference Include="XiHan.Framework.Web.Core" Version="2.2.0-alpha.4" />
-      <PackageReference Include="XiHan.Framework.Web.Docs" Version="2.2.0-alpha.4" />
-      <PackageReference Include="XiHan.Framework.Web.Gateway" Version="2.2.0-alpha.4" />
-      <PackageReference Include="XiHan.Framework.Web.RealTime" Version="2.2.0-alpha.4" />
+      <PackageReference Include="XiHan.Framework.Web.Api" Version="2.0.0" />
+      <PackageReference Include="XiHan.Framework.Web.Core" Version="2.0.0" />
+      <PackageReference Include="XiHan.Framework.Web.Docs" Version="2.0.0" />
+      <PackageReference Include="XiHan.Framework.Web.Gateway" Version="2.0.0" />
+      <PackageReference Include="XiHan.Framework.Web.RealTime" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
