--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -27,7 +27,14 @@
   "Caching": {
     "Redis": {
       "IsEnabled": true,
-      "Configuration": "127.0.0.1:6379"
+      "Configuration": "127.0.0.1:6379,password=mypassword,defaultDatabase=0",
+      "InstanceName": "XiHan:",
+      "ConnectTimeout": 5000,
+      "SyncTimeout": 5000,
+      "AsyncTimeout": 5000,
+      "AllowAdmin": false,
+      "UseSsl": false,
+      "AbortOnConnectFail": false
     }
   }
 }
