--- a/backend/src/modules/XiHan.BasicApp.Rbac/XiHan.BasicApp.Rbac.csproj
+++ b/backend/src/modules/XiHan.BasicApp.Rbac/XiHan.BasicApp.Rbac.csproj
@@ -20,6 +20,9 @@
 
     <ItemGroup>
       <Folder Include="Options\" />
+      <Folder Include="Services\Application\" />
+      <Folder Include="Services\Domain\" />
+      <Folder Include="Services\Dtos\" />
     </ItemGroup>
 
 </Project>
